<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="ExtraText"><![CDATA[

    "/>


    ]]>

    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pet_image"
        android:layout_centerHorizontal="true"
        android:text="@string/Welcome_to_Tamagothic"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="71dp"
        tools:ignore="MissingConstraints,UnknownId" />

    <ImageView
        android:id="@+id/pet_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/Todo"
        android:src="@drawable/pet_image"
        tools:ignore="InvalidId,MissingConstraints"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="265dp" />

    <Button
        android:id="@+id/buttonContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textWelcome"
        android:layout_centerHorizontal="true"
        android:text="@string/get_started"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="156dp"
        tools:layout_editor_absoluteY="540dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/second_screen"
        android:textSize="24sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="617dp" />

</androidx.constraintlayout.widget.ConstraintLayout>

